@@ -20,7 +20,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *   $Id: m_error.c,v 1.1 1999/07/29 07:11:48 tomh Exp $
+ *   $Id: m_error.c,v 1.2 2000/02/01 00:44:11 lusky Exp $
  */
 #include "m_commands.h"
 #include "client.h"
@@ -112,10 +112,10 @@ int m_error(struct Client *cptr, struct Client *sptr, int parc, char *parv[])
   if (IsPerson(cptr) || IsUnknown(cptr))
     return 0;
   if (cptr == sptr)
-    sendto_ops("ERROR :from %s -- %s",
+    sendto_realops("ERROR :from %s -- %s",
                get_client_name(cptr, FALSE), para);
   else
-    sendto_ops("ERROR :from %s via %s -- %s", sptr->name,
+    sendto_realops("ERROR :from %s via %s -- %s", sptr->name,
                get_client_name(cptr,FALSE), para);
   return 0;
 }
