@@ -20,7 +20,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *   $Id: m_userhost.c,v 1.6 2000/01/02 22:41:01 lusky Exp $
+ *   $Id: m_userhost.c,v 1.7 2000/10/29 20:04:30 lusky Exp $
  */
 
 #include "m_commands.h"
@@ -157,7 +157,7 @@ int     m_userhost(struct Client *cptr,
   ircsprintf(buf, "%s%s %s %s %s %s",
     form_str(RPL_USERHOST),
     response[0], response[1], response[2], response[3], response[4] );
-  sendto_one(sptr, buf, me.name, parv[0]);
+  sendto_one(sptr, "%s", buf, me.name, parv[0]);
 
   return 0;
 }
